--- a/index.html
+++ b/index.html
@@ -4,7 +4,69 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohamma Shoaib khan</title>
+    <title>Mohammad Shoaib Khan — Full‑Stack Developer</title>
+    <meta
+      name="description"
+      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps. React, Node.js, MongoDB, Express, Tailwind CSS."
+    />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://your-domain.com/" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0b1020" />
+    <meta name="theme-color" content="#0b1020" />
+
+    <!-- Open Graph (Facebook, LinkedIn, Slack, etc.) -->
+    <meta property="og:site_name" content="Mohammad Shoaib Khan" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta
+      property="og:title"
+      content="Mohammad Shoaib Khan — Full‑Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps."
+    />
+    <meta property="og:image" content="https://your-domain.com/og-cover.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@yourhandle" />
+    <meta
+      name="twitter:title"
+      content="Mohammad Shoaib Khan — Full‑Stack Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps."
+    />
+    <meta name="twitter:image" content="https://your-domain.com/og-cover.jpg" />
+
+    <!-- Basic SEO helpers -->
+    <meta name="robots" content="index,follow" />
+    <meta name="author" content="Mohammad Shoaib Khan" />
+
+    <!-- PWA (optional but nice) -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Preload primary font (optional) -->
+    <!-- <link rel="preload" href="/fonts/Inter-var.woff2" as="font" type="font/woff2" crossorigin /> -->
+
+    <!-- Vite -->
+    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
