--- a/index.html
+++ b/index.html
@@ -2,71 +2,133 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohammad Shoaib Khan — Full‑Stack Developer</title>
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Mohammad Shoaib Khan | Full-Stack MERN Developer | React & Node.js Expert
+    </title>
+    <meta
+      name="title"
+      content="Mohammad Shoaib Khan | Full-Stack MERN Developer | React & Node.js Expert"
+    />
     <meta
       name="description"
-      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps. React, Node.js, MongoDB, Express, Tailwind CSS."
+      content="Experienced full-stack MERN developer specializing in React, Node.js, MongoDB, and Express. Building modern e-commerce platforms, CRM systems, and scalable web applications. Available for freelance projects."
     />
+    <meta
+      name="keywords"
+      content="MERN Stack Developer, React Developer, Node.js Developer, Full-Stack Developer, MongoDB, Express.js, JavaScript Developer, Web Developer India, Freelance Developer, E-commerce Development, CRM Development"
+    />
+    <meta name="author" content="Mohammad Shoaib Khan" />
+    <meta name="robots" content="index, follow" />
 
-    <!-- Canonical -->
-    <link rel="canonical" href="https://your-domain.com/" />
+    <!-- Canonical URL - Update with your actual domain -->
+    <link rel="canonical" href="https://mohammadshoaibkhan.com/" />
 
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0b1020" />
-    <meta name="theme-color" content="#0b1020" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#3B82F6" />
+    <meta name="msapplication-TileColor" content="#3B82F6" />
 
-    <!-- Open Graph (Facebook, LinkedIn, Slack, etc.) -->
-    <meta property="og:site_name" content="Mohammad Shoaib Khan" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:url" content="https://mohammadshoaibkhan.com/" />
     <meta
       property="og:title"
-      content="Mohammad Shoaib Khan — Full‑Stack Developer"
+      content="Mohammad Shoaib Khan | Full-Stack MERN Developer"
     />
     <meta
       property="og:description"
-      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps."
+      content="Experienced full-stack MERN developer building modern web applications. Specializing in React, Node.js, MongoDB, and scalable solutions."
     />
-    <meta property="og:image" content="https://your-domain.com/og-cover.jpg" />
+    <meta
+      property="og:image"
+      content="https://mohammadshoaibkhan.com/og-image.jpg"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Mohammad Shoaib Khan - Full-Stack Developer Portfolio"
+    />
+    <meta property="og:site_name" content="Mohammad Shoaib Khan Portfolio" />
+    <meta property="og:locale" content="en_IN" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@yourhandle" />
+    <meta name="twitter:url" content="https://mohammadshoaibkhan.com/" />
     <meta
       name="twitter:title"
-      content="Mohammad Shoaib Khan — Full‑Stack Developer"
+      content="Mohammad Shoaib Khan | Full-Stack MERN Developer"
     />
     <meta
       name="twitter:description"
-      content="Full‑stack MERN developer building fast, modern e‑commerce, CRM, and business apps."
+      content="Experienced full-stack MERN developer building modern web applications. React, Node.js, MongoDB expert."
     />
-    <meta name="twitter:image" content="https://your-domain.com/og-cover.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://mohammadshoaibkhan.com/og-image.jpg"
+    />
+    <meta name="twitter:creator" content="@yourhandle" />
 
-    <!-- Basic SEO helpers -->
-    <meta name="robots" content="index,follow" />
-    <meta name="author" content="Mohammad Shoaib Khan" />
+    <!-- Additional SEO -->
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="IN" />
+    <meta name="geo.placename" content="India" />
 
-    <!-- PWA (optional but nice) -->
+    <!-- PWA -->
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
+    <meta name="apple-mobile-web-app-title" content="Mohammad Khan" />
 
-    <!-- Preload primary font (optional) -->
-    <!-- <link rel="preload" href="/fonts/Inter-var.woff2" as="font" type="font/woff2" crossorigin /> -->
+    <!-- Preconnect to external domains (if using external fonts/APIs) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Vite -->
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Structured Data (JSON-LD) for better SEO -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mohammad Shoaib Khan",
+        "url": "https://mohammadshoaibkhan.com",
+        "image": "https://mohammadshoaibkhan.com/profile.jpg",
+        "sameAs": [
+          "https://github.com/your-username",
+          "https://www.linkedin.com/in/your-handle",
+          "https://twitter.com/your-handle"
+        ],
+        "jobTitle": "Full-Stack MERN Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Loanyfy"
+        },
+        "email": "khanbhaishoaib107@gmail.com",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "IN"
+        },
+        "knowsAbout": [
+          "React",
+          "Node.js",
+          "MongoDB",
+          "Express.js",
+          "JavaScript",
+          "Full-Stack Development",
+          "MERN Stack",
+          "Web Development"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
