--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     />
     <meta
       property="og:image"
-      content="https://mohammadshoaibkhan.com/og-image.jpg"
+      content="https://res.cloudinary.com/dt7qppfbh/image/upload/v1762139970/aiimg1_jlasiv.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -72,7 +72,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://mohammadshoaibkhan.com/og-image.jpg"
+      content="https://res.cloudinary.com/dt7qppfbh/image/upload/v1762139970/aiimg1_jlasiv.png"
     />
     <meta name="twitter:creator" content="@yourhandle" />
 
@@ -82,7 +82,7 @@
     <meta name="geo.placename" content="India" />
 
     <!-- PWA -->
-    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
@@ -101,18 +101,17 @@
         "@type": "Person",
         "name": "Mohammad Shoaib Khan",
         "url": "https://mohammadshoaibkhan.com",
-        "image": "https://mohammadshoaibkhan.com/profile.jpg",
+        "image": "https://res.cloudinary.com/dt7qppfbh/image/upload/v1762139970/aiimg1_jlasiv.png",
         "sameAs": [
-          "https://github.com/your-username",
-          "https://www.linkedin.com/in/your-handle",
-          "https://twitter.com/your-handle"
+          "https://github.com/mohdshoaibkhan72",
+          "https://www.linkedin.com/in/mohdshoaibkhan72"
         ],
         "jobTitle": "Full-Stack MERN Developer",
         "worksFor": {
           "@type": "Organization",
-          "name": "Loanyfy"
+          "name": "Freelancer"
         },
-        "email": "khanbhaishoaib107@gmail.com",
+        "email": "contact@mohammadshoaibkhan.com",
         "address": {
           "@type": "PostalAddress",
           "addressCountry": "IN"
