--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <!-- Primary Meta Tags -->
     <title>
-      Mohammad Shoaib Khan | Full-Stack MERN Developer | React & Node.js Expert
+      Devesh Kumar Dubey | Front-end Developer | Ui/Ux Designer
     </title>
     <meta
       name="title"
-      content="Mohammad Shoaib Khan | Full-Stack MERN Developer | React & Node.js Expert"
+      content="Devesh Kumar Dubey | Front-end Developer | Ui/Ux Designer"
     />
     <meta
       name="description"
@@ -20,7 +20,7 @@
       name="keywords"
       content="MERN Stack Developer, React Developer, Node.js Developer, Full-Stack Developer, MongoDB, Express.js, JavaScript Developer, Web Developer India, Freelance Developer, E-commerce Development, CRM Development"
     />
-    <meta name="author" content="Mohammad Shoaib Khan" />
+    <meta name="author" content="Devesh Kumar Dubey" />
     <meta name="robots" content="index, follow" />
 
     <!-- Canonical URL - Update with your actual domain -->
@@ -40,7 +40,7 @@
     <meta property="og:url" content="https://mohammadshoaibkhan.com/" />
     <meta
       property="og:title"
-      content="Mohammad Shoaib Khan | Full-Stack MERN Developer"
+      content="Devesh Kumar Dubey | Front-end Developer & UI/Ux Designer"
     />
     <meta
       property="og:description"
@@ -93,6 +93,10 @@
     <!-- Preconnect to external domains (if using external fonts/APIs) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Structured Data (JSON-LD) for better SEO -->
     <script type="application/ld+json">
